DASHB-373: Improve workspace view